Correct filename in docs/man/man3/* header :mansource:
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man3/PM_ROTATION_VECTOR.asciidoc
+++ b/docs/man/man3/PM_ROTATION_VECTOR.asciidoc
@@ -4,7 +4,7 @@
 
 = funct
 :manmanual: HAL Components
-:mansource: ../man/man3/PM_ROTATION_VECTOR.3.asciidoc
+:mansource: ../man/man3/PM_ROTATION_VECTOR.asciidoc
 :man version : 
 
 
