--- a/docs/man/man3/hal_exit.asciidoc
+++ b/docs/man/man3/hal_exit.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_exit
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_exit.3hal.asciidoc
+:mansource: ../man/man3/hal_exit.asciidoc
 :man version : 
 
 
