--- a/docs/man/man3/hal_export_funct.asciidoc
+++ b/docs/man/man3/hal_export_funct.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_export_funct
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_export_funct.3hal.asciidoc
+:mansource: ../man/man3/hal_export_funct.asciidoc
 :man version : 
 
 
