--- a/docs/man/man3/hal_malloc.asciidoc
+++ b/docs/man/man3/hal_malloc.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_malloc
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_malloc.3hal.asciidoc
+:mansource: ../man/man3/hal_malloc.asciidoc
 :man version : 
 
 
