--- a/docs/man/man3/hal_param_new.asciidoc
+++ b/docs/man/man3/hal_param_new.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_param_new
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_param_new.3hal.asciidoc
+:mansource: ../man/man3/hal_param_new.asciidoc
 :man version : 
 
 
