--- a/docs/man/man3/hal_parport.asciidoc
+++ b/docs/man/man3/hal_parport.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_parport
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_parport.3hal.asciidoc
+:mansource: ../man/man3/hal_parport.asciidoc
 :man version : 
 
 
