--- a/docs/man/man3/hal_set_constructor.asciidoc
+++ b/docs/man/man3/hal_set_constructor.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_set_constructor
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_set_constructor.3hal.asciidoc
+:mansource: ../man/man3/hal_set_constructor.asciidoc
 :man version : 
 
 
