--- a/docs/man/man3/hal_set_lock.asciidoc
+++ b/docs/man/man3/hal_set_lock.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_set_lock
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_set_lock.3hal.asciidoc
+:mansource: ../man/man3/hal_set_lock.asciidoc
 :man version : 
 
 
