--- a/docs/man/man3/hal_type_t.asciidoc
+++ b/docs/man/man3/hal_type_t.asciidoc
@@ -4,7 +4,7 @@
 
 = hal_type_t
 :manmanual: HAL Components
-:mansource: ../man/man3/hal_type_t.3hal.asciidoc
+:mansource: ../man/man3/hal_type_t.asciidoc
 :man version : 
 
 
