--- a/docs/man/man3/hm2_pktuart_send.asciidoc
+++ b/docs/man/man3/hm2_pktuart_send.asciidoc
@@ -6,7 +6,7 @@
 \# Author Boris Skegin
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
-:mansource: ../man/man3/hm2_pktuart_send.3hm2.asciidoc
+:mansource: ../man/man3/hm2_pktuart_send.asciidoc
 :man version : 
 
 
