--- a/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
+++ b/docs/man/man3/hm2_tram_add_bspi_frame.asciidoc
@@ -6,7 +6,7 @@
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
-:mansource: ../man/man3/hm2_tram_add_bspi_frame.3hm2.asciidoc
+:mansource: ../man/man3/hm2_tram_add_bspi_frame.asciidoc
 :man version : 
 
 
