--- a/docs/man/man3/hm2_uart_setup.asciidoc
+++ b/docs/man/man3/hm2_uart_setup.asciidoc
@@ -6,7 +6,7 @@
 \# Author Andy Pugh
 \# Issued under the terms of the GPL v2 License or any later version
 :manmanual: HAL Components
-:mansource: ../man/man3/hm2_uart_setup.3hm2.asciidoc
+:mansource: ../man/man3/hm2_uart_setup.asciidoc
 :man version : 
 
 
