--- a/docs/man/man3/intro_hal.asciidoc
+++ b/docs/man/man3/intro_hal.asciidoc
@@ -4,7 +4,7 @@
 
 = intro:- hal
 :manmanual: HAL Components
-:mansource: ../man/man3/intro.3hal.asciidoc
+:mansource: ../man/man3/intro_3hal.asciidoc
 :man version : 
 
 
