--- a/docs/man/man3/rtapi_div_u64.asciidoc
+++ b/docs/man/man3/rtapi_div_u64.asciidoc
@@ -19,7 +19,7 @@
 \" along with this program; if not, write to the Free Software
 \" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_div_u64.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_div_u64.asciidoc
 :man version : 
 
 
