--- a/docs/man/man3/rtapi_exit.asciidoc
+++ b/docs/man/man3/rtapi_exit.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_exit
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_exit.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_exit.asciidoc
 :man version : 
 
 
