--- a/docs/man/man3/rtapi_init.asciidoc
+++ b/docs/man/man3/rtapi_init.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_init
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_init.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_init.asciidoc
 :man version : 
 
 
