--- a/docs/man/man3/rtapi_outb.asciidoc
+++ b/docs/man/man3/rtapi_outb.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_outb
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_outb.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_outb.asciidoc
 :man version : 
 
 
