--- a/docs/man/man3/rtapi_region.asciidoc
+++ b/docs/man/man3/rtapi_region.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_region
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_region.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_region.asciidoc
 :man version : 
 
 
