--- a/docs/man/man3/rtapi_set_msg_level.asciidoc
+++ b/docs/man/man3/rtapi_set_msg_level.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_set_msg_level
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_set_msg_level.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_set_msg_level.asciidoc
 :man version : 
 
 
