--- a/docs/man/man3/rtapi_task_new.asciidoc
+++ b/docs/man/man3/rtapi_task_new.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_task_new
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_task_new.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_task_new.asciidoc
 :man version : 
 
 
