--- a/docs/man/man3/rtapi_task_wait.asciidoc
+++ b/docs/man/man3/rtapi_task_wait.asciidoc
@@ -4,7 +4,7 @@
 
 = rtapi_task_wait
 :manmanual: HAL Components
-:mansource: ../man/man3/rtapi_task_wait.3rtapi.asciidoc
+:mansource: ../man/man3/rtapi_task_wait.asciidoc
 :man version : 
 
 
