Amend setup for building machinekit-manual-pages
Script not required in source tree, code works better in Jenkins

Move machinekit.1 troff stub page to unique location to make
file copies easier to script.

Jenkins website-preview now creating an installable package
just needs these changes to move to production

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/machinekit.1
+++ b/docs/man/machinekit.1
@@ -78,6 +78,12 @@ to simply use the web site and never install the local manual pages.
 
 (NB If you are a developer and use the --view-doc option to (inst)comp, you will need asciidoctor and elinks for that to operate.)
 
+.SH NOTE
+
+Remember that many programs and utilities have their own help system.
+
+Also try <program-name> -h or --help
+
 .SH AUTHOR
 This man page written by ArcEye, as part of the Machinekit project.
 
