--- a/docs/getting-started/install-runtime-packages.asciidoc
+++ b/docs/getting-started/install-runtime-packages.asciidoc
@@ -21,3 +21,21 @@ sudo apt-get install machinekit-xenomai machinekit-dev
 ----
 sudo apt-get install machinekit-posix  machinekit-dev # non-RT (aka 'simulator mode')
 ----
+
+This package will provide local copies of the manual pages and a man page stub to remind
+of how to use them.
+
+[source,bash]
+----
+sudo apt-get install machinekit-manual-pages
+----
+
+It is an optional install for users who wish to use a stand alone system or who have limited
+internet connectivity.
+
+The same pages can be accessed here: +
+http://www.machinekit.io/docs/man/man1/  For information on utilities and GUIs +
+http://www.machinekit.io/docs/man/man3/  For information on the hal and rtapi APIs +
+http://www.machinekit.io/docs/man/man9/  For information on components and drivers +
+
+
