--- a/docs/man/man9/mux_generic.asciidoc
+++ b/docs/man/man9/mux_generic.asciidoc
@@ -12,42 +12,53 @@
 
 == NAME
 
-mux_generic -- choose one from several input values
+**mux_generic** -- choose one from several input values
 
 
 == SYNOPSIS
-loadrt mux_generic config="bb8,fu12...."
+**loadrt mux_generic** __config="bb8,fu12...."__
+
+[NOTE]
+This is a legacy Linuxcnc component and somewhat confusingly, this component creates a **hal_name** of __mux-gen.NN__,
+hence why all functions and pins have that name. +
+It could be subject to change, to comply with the Machinekit norm that all components
+have the same loaded name as the component, unless aliased by __names=[name1],....__
+
 
 
 == FUNCTIONS
 
-**mux-gen.**__NN__ Depending on the data types can run in either a floating
+**mux-gen**.__NN__ +
+Depending on the data types can run in either a floating
 point or non-floating point thread.
 
 
 
 == PINS
 
-mux-gen.__NN__**.suppress-no-input** bit in 
+**mux-gen**.__NN__**.suppress-no-input** bit in +
 This suppresses changing the output if all select lines are false.
 This stops unwanted jumps in output between transitions of input.
 but makes in00 unavaliable.
 
 
-mux-gen.__NN__**.debounce-us** unsigned in 
-sets debouce time in microseconds.  eg. 100000 = a tenth of a second.
+**mux-gen**.__NN__**.debounce-us** unsigned in +
+sets debouce time in microseconds.  eg. 100000 = a tenth of a second. +
 The selection inputs must be stable this long before the output changes. This
 helps to ignore 'noisy' switches.
 
 
-mux-gen.__NN__**.sel-bit**__MMM__ bit in  (M=0..N) 
+**mux-gen**.__NN__**.sel-bit**__MMM__ bit in  (M=0..N) +
+**mux-gen**.__NN__**.sel-int**__MMM__ unsigned in
 
-mux-gen.__NN__**.sel-int**__MMM__ unsigned in 
-Together, these determine which **in**__N__ value is copied to **output**.
+Together, these pins determine which **in**__N__ value is copied to **output**.
+
 The bit pins are interpreted as binary bits, and the result is simply added on
-to the integer pin input. It is expected that eoither one or the other
+to the integer pin input. +
+It is expected that either one or the other
 would normally be used. Hower, the possibility exists to use a higher-order
 bit to "shift" the values set by the integer pin. 
+
 The sel-bit pins are only created when the size of the mux_gen component is an
 integer power of two. 
 
@@ -56,27 +67,27 @@ however the same effect can be achieved by arranging the order of the input
 values to suit. 
 
 
-mux-gen.__NN__**.out-[bit/float/s32/u32]** variable-type out 
+**mux-gen**.__NN__**.out-[bit/float/s32/u32]** variable-type out +
 
 Follows the value of one of the **in**__N__ values according to the selection 
-bits and/or the selection number. 
+bits and/or the selection number. +
 Values will be converted/truncated according to standard C rules. This means,
 for example that a float input greater than 2147483647 will give an S32 output
 of -2147483648. 
 
 
-mux-gen.__NN__**.in-[bit/float/s32/u32]-**__MM__ variable-type in
+**mux-gen**.__NN__**.in-[bit/float/s32/u32]-**__MM__ variable-type in +
 The possible output values that are selected by the selection pins. 
 
 
 
 == PARAMETERS
 
-mux-gen.__N__**.elapsed** float r 
+**mux-gen**.__N__**.elapsed** float r +
 Current value of the internal debounce timer
 for debugging.
 
-mux-gen.__N__**.selected** s32 r 
+**mux-gen**.__N__**.selected** s32 r +
 Current value of the internal selection variable after conversion
 for debugging. Possibly useful for setting up gray-code switches. 
  
@@ -84,17 +95,25 @@ for debugging. Possibly useful for setting up gray-code switches.
 
 == DESCRIPTION
 This component is a more general version of the other multiplexing components.
+
 It allows the creation of arbitrary-size multiplexers (up to 1024 entries) and
 also supports differing data types on the input and output pins. 
+
 The configuration string is a comma-separated list of code-letters and numbers,
-such as "bb4,fu12" This would create a 4-element bit-to-bit mux and a 
-12-element float-to-unsigned mux. The code letters are b = bit, f = float, s =
-signed integer, u = unsigned integer. The first letter code is the input type,
-the second is the output type. The codes are not case-sensitive. The order of
+such as "bb4,fu12" +
+This would create a 4-element bit-to-bit mux and a 
+12-element float-to-unsigned mux. 
+
+The code letters are b = bit, f = float, s =
+signed integer, u = unsigned integer. +
+The first letter code is the input type,
+the second is the output type. +
+The codes are not case-sensitive. The order of
 the letters is significant but the position in the string is not. Do not
 insert any spaces in the config string. 
-Any non-zero float value will be converted to a "true" output in bit form. Be
-wary that float datatypes can be very, very, close to zero and not actually be
+
+Any non-zero float value will be converted to a "true" output in bit form. +
+Be wary that float datatypes can be very, very, close to zero and not actually be
 equal to zero. 
 
 Each mux has its own HAL function and must be added to a thread separately. 
