Finish tidy and format /man9 components
Mostly edited for consistency of formatting and appearence
plus a couple of factual updates, instances of 'Linuxcnc' etc

images added to stepgen man page to replace troff generated graphs

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man9/stepgen.asciidoc
+++ b/docs/man/man9/stepgen.asciidoc
@@ -11,7 +11,7 @@
 
 
 == NAME
-stepgen -- software step pulse generation
+**stepgen** -- software step pulse generation
 
 
 == SYNOPSIS
@@ -24,7 +24,7 @@ stepgen -- software step pulse generation
 step rate depends on the CPU and other factors, and is usually in the range
 of 5KHz to 25KHz.  If higher rates are needed, a hardware step generator
 is a better choice.
-.P
+
 **stepgen** has two control modes, which can be selected on a channel
 by channel basis using **ctrl_type**.  Possible values are "**p**"
 for position control, and "**v**" for velocity control. The default
@@ -35,49 +35,49 @@ limits.  Usually, position mode is used for machine axes.  Velocity mode
 is reserved for unusual applications where continuous movement at some
 speed is desired, instead of movement to a specific position.  (Note that
 velocity mode replaces the former component **freqgen**.)
-.P
+
 **stepgen** can control a maximum of 16 motors.  The number of
 motors/channels actually loaded depends on the number of __type__ values
 given.  The value of each __type__ determines the outputs for that channel.
 Position or velocity mode can be individually selected for each channel.
 Both control modes support the same 16 possible step types.
-.P
+
 By far the most common step type is '0', standard step and direction.  Others
 include up/down, quadrature, and a wide variety of three, four, and five phase
 patterns that can be used to directly control some types of motor windings.
 (When used with appropriate buffers of course.)
-.P
+
 Some of the stepping types are described below, but for more details (including
 timing diagrams) see the **stepgen** section of the HAL reference manual.
 
-type 0: step/dir
+**type 0: step/dir** +
 Two pins, one for step and one for direction.  **make-pulses** must run at least twice for each step (once to set the step pin true, once to clear it).  This limits the maximum step rate to half (or less) of the rate that can be reached by types 2-14.  The parameters **steplen** and **stepspace** can further lower the maximum step rate.  Parameters **dirsetup** and **dirhold** also apply to this step type.
 
-type 1: up/down
+**type 1: up/down** +
 Two pins, one for 'step up' and one for 'step down'.  Like type 0, **make-pulses** must run twice per step, which limits the maximum speed.
 
-type 2: quadrature
+**type 2: quadrature** +
 Two pins, phase-A and phase-B.  For forward motion, A leads B.  Can advance by one step every time **make-pulses** runs.
 
-type 3: three phase, full step
+**type 3: three phase, full step** +
 Three pins, phase-A, phase-B, and phase-C.  Three steps per full cycle, then repeats.  Only one phase is high at a time - for forward motion the pattern is A, then B, then C, then A again.
 
-type 4: three phase, half step
+**type 4: three phase, half step** +
 Three pins, phases A through C.  Six steps per full cycle.  First A is high alone, then A and B together, then B alone, then B and C together, etc.
 
-types 5 through 8: four phase, full step
+**types 5 through 8: four phase, full step** +
 Four pins, phases A through D.  Four steps per full cycle.  Types 5 and 6 are suitable for use with unipolar steppers, where power is applied to the center tap of each winding, and four open-collector transistors drive the ends.  Types 7 and 8 are suitable for bipolar steppers, driven by two H-bridges.
 
-types 9 and 10: four phase, half step
+**types 9 and 10: four phase, half step** +
 Four pins, phases A through D.  Eight steps per full cycle.  Type 9 is suitable for unipolar drive, and type 10 for bipolar drive.
 
-types 11 and 12: five phase, full step
+**types 11 and 12: five phase, full step** +
 Five pins, phases A through E.  Five steps per full cycle.  See HAL reference manual for the patterns.
 
-types 13 and 14: five phase, half step
+**types 13 and 14: five phase, half step** +
 Five pins, phases A through E.  Ten steps per full cycle.  See HAL reference manual for the patterns.
 
-type 15: user-specified
+**type 15: user-specified** +
 This uses the waveform specified by the **user_step_type** module parameter,
 which may have up to 10 steps and 5 phases.
 
@@ -170,77 +170,33 @@ The minimum time between a forward step and a reverse step, in nanoseconds.
 
 
 == TIMING
-.P
+
 There are five timing parameters which control the output waveform.  No step type
 uses all five, and only those which will be used are exported to HAL.  The values
 of these parameters are in nano-seconds, so no recalculation is needed when
 changing thread periods.  In the timing diagrams that follow, they are identfied
 by the following numbers:
-.P
+
 (1) **stepgen.n.steplen**
-.P
+
 (2) **stepgen.n.stepspace**
-.P
+
 (3) **stepgen.n.dirhold**
-.P
+
 (4) **stepgen.n.dirsetup**
-.P
+
 (5) **stepgen.n.dirdelay**
-.P
+
 For step type 0, timing parameters 1 thru 4 are used.  The following timing diagram
 shows the output waveforms, and what each parameter adjusts.
-.P
-.ie '\*[.T]'html' .HTML <PRE> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; _ &nbsp; &nbsp; &nbsp; &nbsp; _ &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; _<BR> &nbsp; &nbsp;STEP &nbsp;/ &nbsp; &nbsp; &#92;___/ &nbsp; &nbsp; &#92;_/ &nbsp; &nbsp; &#92;__<BR> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; | &nbsp; &nbsp; |<BR> &nbsp; &nbsp;Time &nbsp; &nbsp; &nbsp;|-(1)-|--(2)--|-(1)-|--(3)--|-(4)-|-(1)-|<BR> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|__<BR> &nbsp; &nbsp;DIR &nbsp; /<BR></PRE>
-.el \{\
-.PD 0
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ _\ \ \ \ \ \ \ \ \ _\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ _
-.P
-.ft CR
-\ \ \ \ STEP\ \ /\ \ \ \ \ \\___/\ \ \ \ \ \\_/\ \ \ \ \ \\__
-.P
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ \ \ |\ \ \ \ \ |\ \ \ \ \ \ \ |\ \ \ \ \ |\ \ \ \ \ \ \ \ \ \ \ \ \ |\ \ \ \ \ |
-.P
-.ft CR
-\ \ \ \ Time\ \ \ \ \ \ |-(1)-|--(2)--|-(1)-|--(3)--|-(4)-|-(1)-|
-.P
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ |__
-.P
-.ft CR
-\ \ \ \ DIR\ \ \ /
-.ft R
-\}
-.PD
-.P
+
+image::../images/waveform1.png[align="center"]
+
 For step type 1, timing parameters 1, 2, and 5 are used.  The following timing diagram
 shows the output waveforms, and what each parameter adjusts.
-.P
-.ie '\*[.T]'html' .HTML <PRE> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; _ &nbsp; &nbsp; &nbsp; _<BR> &nbsp; &nbsp;UP &nbsp; &nbsp;__/ &nbsp; &nbsp; &#92;_/ &nbsp; &nbsp; &#92;<BR> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;| &nbsp; &nbsp; | &nbsp; &nbsp; | &nbsp; &nbsp; | &nbsp; &nbsp; &nbsp; &nbsp; |<BR> &nbsp; &nbsp;Time &nbsp; &nbsp;|-(1)-|-(2)-|-(1)-|---(5)---|-(1)-|-(2)-|-(1)-|<BR> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;|_| &nbsp; &nbsp; |_|<BR> &nbsp; &nbsp;DOWN &nbsp;__/ &nbsp; &nbsp; &#92;_/ &nbsp; &nbsp; &#92;<BR></PRE>
-.el \{\
-.PD 0
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ \ _\ \ \ \ \ \ \ _
-.P
-.ft CR
-\ \ \ \ UP\ \ \ \ __/\ \ \ \ \ \\_/\ \ \ \ \ \\
-.P
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ |\ \ \ \ \ |\ \ \ \ \ |\ \ \ \ \ |\ \ \ \ \ \ \ \ \ |
-.P
-.ft CR
-\ \ \ \ Time\ \ \ \ |-(1)-|-(2)-|-(1)-|---(5)---|-(1)-|-(2)-|-(1)-|
-.P
-.ft CR
-\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ |_|\ \ \ \ \ |_|
-.P
-.ft CR
-\ \ \ \ DOWN\ \ __/\ \ \ \ \ \\_/\ \ \ \ \ \\
-.ft R
-\}
-.PD
-.P
+
+image::../images/waveform2.png[align="center"]
+
 For step types 2 and higher, the exact pattern of the outputs depends on the step
 type (see the HAL manual for a full listing).  The outputs change from one state to
 another at a minimum interval of **steplen**.  When a direction change occurs, the
