--- a/docs/man/man3/hal_init.asciidoc
+++ b/docs/man/man3/hal_init.asciidoc
@@ -10,17 +10,17 @@
 
 == NAME
 
-hal_init -- initialize a component
+**hal_init** -- initialize a component
 
 
 
 == SYNTAX
- int hal_init(const char *__compname__)
+**int hal_init** ( **const char** *__compname__ )
 
 
 
 == ARGUMENTS
-__modname__
+__modname__ +
 The name of this hal component
 
 
@@ -29,9 +29,10 @@ The name of this hal component
 
 **hal_init** creates a HAL component.
 
-__compname__ a string that identifies the component.
+__compname__ a string that identifies the component. +
 The string may be no longer than **RTAPI_NAME_LEN**
-characters.  If __compname__ is **NULL**, the system will assign a
+characters.  +
+If __compname__ is **NULL**, the system will assign a
 name.
 
 
@@ -43,5 +44,5 @@ Call only from within user or init/cleanup code, not from realtime tasks.
 
 == RETURN VALUE
 On success, returns a positive integer module ID, which is
-used for subsequent calls to hal and rtapi APIs.
+used for subsequent calls to hal and rtapi APIs. +
 On failure, returns a HAL error code.
