--- a/docs/man/man3/hal_add_funct_to_thread.asciidoc
+++ b/docs/man/man3/hal_add_funct_to_thread.asciidoc
@@ -10,38 +10,42 @@
 
 == NAME
 
-hal_add_funct_to_thread -- cause a function to be executed at regular intervals
+**hal_add_funct_to_thread** -- cause a function to be executed at regular intervals
 
 
 
 == SYNTAX
-int hal_add_funct_to_thread(const char *__funct_name__, const char *__thread_name__,
- int position)
+**int hal_add_funct_to_thread** ( **const char** *__funct_name__, **const char** *__thread_name__, **int** position)
 
-int hal_del_funct_from_thread(const char *__funct_name__, const char *__thread_name__)
+**int hal_del_funct_from_thread** ( **const char** *__funct_name__, **const char** *__thread_name__)
 
 
 
 == ARGUMENTS
-.IP __funct_name__
+__funct_name__ +
 The name of the function
 
-.IP __thread_name__
+__thread_name__ +
 The name of the thread
 
-.IP __position__
-The desired location within the thread.  This determines when the function will
-run, in relation to other functions in the thread.  A positive number indicates
-the desired location as measured from the beginning of the thread, and a
-negative is measured from the end.  So +1 means this function will become the
+__position__ +
+The desired location within the thread.  +
+This determines when the function will
+run, in relation to other functions in the thread.  
+
+A positive number indicates the desired location as measured from the beginning of the thread, and a
+negative is measured from the end.  +
+So +1 means this function will become the
 first one to run, +5 means it will be the fifth one to run, -2 means it will be
-next to last, and -1 means it will be last.  Zero is illegal.  
+next to last, and -1 means it will be last.  +
+Zero is illegal.  
 
 
 
 == DESCRIPTION
 **hal_add_funct_to_thread** adds a function exported by a realtime HAL
-component to a realtime thread.  This determines how often and in what order
+component to a realtime thread.  +
+This determines how often and in what order
 functions are executed.  
 
 **hal_del_funct_from_thread** removes a function from a thread.
@@ -58,4 +62,5 @@ Call only from realtime init code, not from user space or realtime code.
 
 
 == SEE ALSO
-**hal_thread_new**, **hal_export_funct**
+**hal_thread_new** +
+**hal_export_funct**
