--- a/docs/man/man3/hal_ready.asciidoc
+++ b/docs/man/man3/hal_ready.asciidoc
@@ -10,24 +10,25 @@
 
 == NAME
 
-hal_ready -- indicates that this component is ready
+**hal_ready** -- indicates that this component is ready
 
 
 
 == SYNTAX
- hal_ready(int __comp_id__)
+**hal_ready** ( **int** __comp_id__ )
 
 
 
 == ARGUMENTS
-.IP __comp_id__
+__comp_id__ +
 A HAL component identifier returned by an earlier call to **hal_init**.
 
 
 
 == DESCRIPTION
 **hal_ready** indicates that this component is ready (has created all its pins,
-parameters, and functions).  This must be called in any realtime HAL component
+parameters, and functions).  +
+This must be called in any realtime HAL component
 before its **rtapi_app_init** exits, and in any userspace component before it
 enters its main loop.
 
