--- a/docs/man/man3/hal_set_lock.asciidoc
+++ b/docs/man/man3/hal_set_lock.asciidoc
@@ -10,21 +10,23 @@
 
 == NAME
 
-hal_set_lock, hal_get_lock -- Set or get the HAL lock level
+**hal_set_lock, hal_get_lock** -- Set or get the HAL lock level
 
 
 
 == SYNTAX
-int hal_set_lock(unsigned char __lock_type__)
+**int hal_set_lock** ( **unsigned char** __lock_type__ )
 
-int hal_get_lock()
+**int hal_get_lock**()
 
 
 
 == ARGUMENTS
-.IP __lock_type__
-The desired lock type, which may be a bitwise combination of: **HAL_LOCK_LOAD**, **HAL_LOCK_CONFIG**, **HAL_LOCK_PARAMS**, or **HAL_LOCK_PARAMS**.  **HAL_LOCK_NONE** or 0 locks nothing, and **HAL_LOCK_ALL locks everything.
-**
+__lock_type__ +
+The desired lock type, which may be a bitwise combination of: +
+**HAL_LOCK_LOAD**, **HAL_LOCK_CONFIG**, **HAL_LOCK_PARAMS**, or **HAL_LOCK_PARAMS**. 
+
+**HAL_LOCK_NONE** or 0 locks nothing, and **HAL_LOCK_ALL** locks everything.
 
 
 == DESCRIPTION
@@ -32,5 +34,6 @@ The desired lock type, which may be a bitwise combination of: **HAL_LOCK_LOAD**,
 
 
 == RETURN VALUE
-**hal_set_lock** Returns a HAL status code.  **hal_get_lock** returns the
-current HAL lock level or a HAL status code.
+**hal_set_lock** Returns a HAL status code.  
+
+**hal_get_lock** returns the current HAL lock level or a HAL status code.
